--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,6 +10,8 @@
     ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
     Groups input in elemsInGroup
     ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
-    Groups input in nodesInGroup</p>
+    Groups input in nodesInGroup
+    ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
+    Polyline and Spline for Beam - Element.Beam.PLine</p>
 </div>
 {% endblock %}      
