--- a/overrides/main.html
+++ b/overrides/main.html
@@ -4,14 +4,16 @@
 <div class="scroll-banner">
   <p>🚀 New Features added ‎ ‎ ‎ ‎: 
     ‎ ‎ ‎ ‎
-    PSC Value section
+    Discussion page for suggestions
     ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
-    Tendon Prestress loading
+    Polyline and Spline for Beam - Element.Beam.PLine
     ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
-    Groups input in elemsInGroup
+    Polyline with Offset options - Element.Beam.PLine2
     ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
-    Groups input in nodesInGroup
+    Alignment defintion and Alignment update
     ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
-    Polyline and Spline for Beam - Element.Beam.PLine</p>
+    Line to Plate conversion
+    ‎ ‎ ‎ ‎ ‎ ‎|‎ ‎ ‎ ‎ ‎ ‎
+     </p>
 </div>
 {% endblock %}      
